k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: walletpulse-backend
  labels:
    app: walletpulse-backend
spec: 
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
      
  selector: 
    matchLabels:
      app: walletpulse-backend

  template: 
    metadata: 
      labels: 
        app: walletpulse-backend

    spec: 
      containers: 
      - name: backend
        image: walletpulsecr.azurecr.io/walletpulse-backend:v1
        ports: 
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5

      resources: 

        requests: 
          cpu: "200m"
          memory: "256Mi"

        limits: 
          cpu: "500m"
          memory: "512Mi"
