k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walletpulse-frontend
  labels:
    app: walletpulse-frontend
spec: 
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector: 
    matchLabels:
      app: walletpulse-frontend

  template: 
    metadata:
      labels: 
        app: walletpulse-frontend

    spec: 
      containers: 
      - name: frontend
        image: walletpulsecr.azurecr.io/walletpulse-frontend:v1
        ports:
        - containerPort: 80

        resources: 
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
