k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: walletpulse-frontend-service
  labels:
    app: walletpulse
    component: frontend

spec:
  type: NodePort

  selector: 
    app: walletpulse-frontend

  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31008
