k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walletpulse-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: walletpulse-backend-service
            port:
              number: 3000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: walletpulse-frontend-service
            port:
              number: 80
